// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parseDomainEstimates > with valid jagged data > parses estimates from array 1`] = `[]`;

exports[`parseDomainEstimates > with valid jagged data > parses estimates from array 2`] = `[]`;

exports[`parseDomainEstimates > with valid jagged data > parses estimates from array 3`] = `
[
  [
    {
      "$signatures": [
        "2ff62a32daaa97f1b316dc07eaeae594a3d57c07bb03fa38c44dd803b192d13b47311a0954440233826a3ae10f6540d991947dad64c8a563e74ae78cd245657f",
      ],
      "addresses": [
        "6a2cb2545c71f84235346643a9f562a973d6adef",
      ],
      "payload_hashes": [
        "abb7ecb2cfc51e1a95f85477b3a4210a72886d5b22fcf32043736c48e2873f2c",
        "3ed825d48507b899395ca943e1dd6ec9a7c948e1cd1573a6cfda66de83af4b11",
      ],
      "payload_schemas": [
        "network.xyo.hash.lease.estimate",
        "network.xyo.ns.domain.registration.lease",
      ],
      "previous_hashes": [
        null,
      ],
      "schema": "network.xyo.boundwitness",
    },
    {
      "$sources": [
        "90259bc9ecde9d4c0061bc92dbfcf32e0f7b2603e49443d9f3c67a6d7e82c7d5",
      ],
      "currency": "USD",
      "exp": 1725225514773,
      "nbf": 1724966314773,
      "price": 16,
      "schema": "network.xyo.hash.lease.estimate",
    },
    {
      "$sources": [
        "407ed63c0c36fadae7ae8d16a42b678551e0ea6aa5357b76f0ffc1bce3ba2f22",
        "ced04c0a3f65bbefde58ba0d15767fcee20b6e25d3820f90c55f44f18effa70f",
      ],
      "domain": "testb88a0ee2-9665-48b3-b9c6-047eadc475ee",
      "exp": 1756502314773,
      "nbf": 1724966314773,
      "registrant": [
        "1b2c45910fb0d32cb1d1cd010cbc594bf05969b5",
      ],
      "registrar": [
        "846c35ce6ec62e4608a1215e14b5b16471904153",
      ],
      "schema": "network.xyo.ns.domain.registration.lease",
      "tld": "xyo",
    },
  ],
]
`;

exports[`parseDomainEstimates > with valid jagged data > parses estimates from array 4`] = `
[
  [
    {
      "$signatures": [
        "6595022e974dae953b6ea145e6c0ca75211afd713a88b6d989e9d00da4e183ad427df8a8175ba46688c5345349464645befe1f2250ecfdc6bdb3cf9c27b65931",
      ],
      "addresses": [
        "93130bb7cf9b059ed6e29b50f29b569a2094bd5e",
      ],
      "payload_hashes": [
        "49699c9d1cfb1a8643037c9557123a9e643a3dd938f619af39b94966ecfdd6ff",
        "af31f9d6afd8f7cbbe5c3310f2a2da9e1af31d1b7cf8dae7d9786848de1e5bd7",
      ],
      "payload_schemas": [
        "network.xyo.hash.lease.estimate",
        "network.xyo.ns.domain.registration.lease",
      ],
      "previous_hashes": [
        null,
      ],
      "schema": "network.xyo.boundwitness",
    },
    {
      "$sources": [
        "dcc7ab18c86d90311bb1b59361f6698e2714294a91aa3126c554aa8483a7ae37",
      ],
      "currency": "USD",
      "exp": 1725225427392,
      "nbf": 1724966227392,
      "price": 16,
      "schema": "network.xyo.hash.lease.estimate",
    },
    {
      "$sources": [
        "fccd06633e70c2168c8eb0eb5e25b22e34c1c417a46d5073034ec977dfc1995d",
        "d7f40698fb0b0261834ef694ed275b4e6547e329cedc1c56708f098a5608b93a",
      ],
      "domain": "test8446e171-46ca-47d5-a3b7-1a658cb7f451",
      "exp": 1756502227392,
      "nbf": 1724966227392,
      "registrant": [
        "1b2c45910fb0d32cb1d1cd010cbc594bf05969b5",
      ],
      "registrar": [
        "846c35ce6ec62e4608a1215e14b5b16471904153",
      ],
      "schema": "network.xyo.ns.domain.registration.lease",
      "tld": "xyo",
    },
  ],
]
`;

exports[`parseDomainEstimates > with valid jagged data > parses estimates from array 5`] = `
[
  [
    {
      "$signatures": [
        "2ff62a32daaa97f1b316dc07eaeae594a3d57c07bb03fa38c44dd803b192d13b47311a0954440233826a3ae10f6540d991947dad64c8a563e74ae78cd245657f",
      ],
      "addresses": [
        "6a2cb2545c71f84235346643a9f562a973d6adef",
      ],
      "payload_hashes": [
        "abb7ecb2cfc51e1a95f85477b3a4210a72886d5b22fcf32043736c48e2873f2c",
        "3ed825d48507b899395ca943e1dd6ec9a7c948e1cd1573a6cfda66de83af4b11",
      ],
      "payload_schemas": [
        "network.xyo.hash.lease.estimate",
        "network.xyo.ns.domain.registration.lease",
      ],
      "previous_hashes": [
        null,
      ],
      "schema": "network.xyo.boundwitness",
    },
    {
      "$sources": [
        "90259bc9ecde9d4c0061bc92dbfcf32e0f7b2603e49443d9f3c67a6d7e82c7d5",
      ],
      "currency": "USD",
      "exp": 1725225514773,
      "nbf": 1724966314773,
      "price": 16,
      "schema": "network.xyo.hash.lease.estimate",
    },
    {
      "$sources": [
        "407ed63c0c36fadae7ae8d16a42b678551e0ea6aa5357b76f0ffc1bce3ba2f22",
        "ced04c0a3f65bbefde58ba0d15767fcee20b6e25d3820f90c55f44f18effa70f",
      ],
      "domain": "testb88a0ee2-9665-48b3-b9c6-047eadc475ee",
      "exp": 1756502314773,
      "nbf": 1724966314773,
      "registrant": [
        "1b2c45910fb0d32cb1d1cd010cbc594bf05969b5",
      ],
      "registrar": [
        "846c35ce6ec62e4608a1215e14b5b16471904153",
      ],
      "schema": "network.xyo.ns.domain.registration.lease",
      "tld": "xyo",
    },
  ],
]
`;

exports[`parseDomainEstimates > with valid symmetric data > parses estimates from array 1`] = `
[
  [
    {
      "$signatures": [
        "6595022e974dae953b6ea145e6c0ca75211afd713a88b6d989e9d00da4e183ad427df8a8175ba46688c5345349464645befe1f2250ecfdc6bdb3cf9c27b65931",
      ],
      "addresses": [
        "93130bb7cf9b059ed6e29b50f29b569a2094bd5e",
      ],
      "payload_hashes": [
        "49699c9d1cfb1a8643037c9557123a9e643a3dd938f619af39b94966ecfdd6ff",
        "af31f9d6afd8f7cbbe5c3310f2a2da9e1af31d1b7cf8dae7d9786848de1e5bd7",
      ],
      "payload_schemas": [
        "network.xyo.hash.lease.estimate",
        "network.xyo.ns.domain.registration.lease",
      ],
      "previous_hashes": [
        null,
      ],
      "schema": "network.xyo.boundwitness",
    },
    {
      "$sources": [
        "dcc7ab18c86d90311bb1b59361f6698e2714294a91aa3126c554aa8483a7ae37",
      ],
      "currency": "USD",
      "exp": 1725225427392,
      "nbf": 1724966227392,
      "price": 16,
      "schema": "network.xyo.hash.lease.estimate",
    },
    {
      "$sources": [
        "fccd06633e70c2168c8eb0eb5e25b22e34c1c417a46d5073034ec977dfc1995d",
        "d7f40698fb0b0261834ef694ed275b4e6547e329cedc1c56708f098a5608b93a",
      ],
      "domain": "test8446e171-46ca-47d5-a3b7-1a658cb7f451",
      "exp": 1756502227392,
      "nbf": 1724966227392,
      "registrant": [
        "1b2c45910fb0d32cb1d1cd010cbc594bf05969b5",
      ],
      "registrar": [
        "846c35ce6ec62e4608a1215e14b5b16471904153",
      ],
      "schema": "network.xyo.ns.domain.registration.lease",
      "tld": "xyo",
    },
  ],
]
`;

exports[`parseDomainEstimates > with valid symmetric data > parses estimates from array 2`] = `
[
  [
    {
      "$signatures": [
        "2ff62a32daaa97f1b316dc07eaeae594a3d57c07bb03fa38c44dd803b192d13b47311a0954440233826a3ae10f6540d991947dad64c8a563e74ae78cd245657f",
      ],
      "addresses": [
        "6a2cb2545c71f84235346643a9f562a973d6adef",
      ],
      "payload_hashes": [
        "abb7ecb2cfc51e1a95f85477b3a4210a72886d5b22fcf32043736c48e2873f2c",
        "3ed825d48507b899395ca943e1dd6ec9a7c948e1cd1573a6cfda66de83af4b11",
      ],
      "payload_schemas": [
        "network.xyo.hash.lease.estimate",
        "network.xyo.ns.domain.registration.lease",
      ],
      "previous_hashes": [
        null,
      ],
      "schema": "network.xyo.boundwitness",
    },
    {
      "$sources": [
        "90259bc9ecde9d4c0061bc92dbfcf32e0f7b2603e49443d9f3c67a6d7e82c7d5",
      ],
      "currency": "USD",
      "exp": 1725225514773,
      "nbf": 1724966314773,
      "price": 16,
      "schema": "network.xyo.hash.lease.estimate",
    },
    {
      "$sources": [
        "407ed63c0c36fadae7ae8d16a42b678551e0ea6aa5357b76f0ffc1bce3ba2f22",
        "ced04c0a3f65bbefde58ba0d15767fcee20b6e25d3820f90c55f44f18effa70f",
      ],
      "domain": "testb88a0ee2-9665-48b3-b9c6-047eadc475ee",
      "exp": 1756502314773,
      "nbf": 1724966314773,
      "registrant": [
        "1b2c45910fb0d32cb1d1cd010cbc594bf05969b5",
      ],
      "registrar": [
        "846c35ce6ec62e4608a1215e14b5b16471904153",
      ],
      "schema": "network.xyo.ns.domain.registration.lease",
      "tld": "xyo",
    },
  ],
]
`;

exports[`parseDomainEstimates > with valid symmetric data > parses estimates from array 3`] = `
[
  [
    {
      "$signatures": [
        "6595022e974dae953b6ea145e6c0ca75211afd713a88b6d989e9d00da4e183ad427df8a8175ba46688c5345349464645befe1f2250ecfdc6bdb3cf9c27b65931",
      ],
      "addresses": [
        "93130bb7cf9b059ed6e29b50f29b569a2094bd5e",
      ],
      "payload_hashes": [
        "49699c9d1cfb1a8643037c9557123a9e643a3dd938f619af39b94966ecfdd6ff",
        "af31f9d6afd8f7cbbe5c3310f2a2da9e1af31d1b7cf8dae7d9786848de1e5bd7",
      ],
      "payload_schemas": [
        "network.xyo.hash.lease.estimate",
        "network.xyo.ns.domain.registration.lease",
      ],
      "previous_hashes": [
        null,
      ],
      "schema": "network.xyo.boundwitness",
    },
    {
      "$sources": [
        "dcc7ab18c86d90311bb1b59361f6698e2714294a91aa3126c554aa8483a7ae37",
      ],
      "currency": "USD",
      "exp": 1725225427392,
      "nbf": 1724966227392,
      "price": 16,
      "schema": "network.xyo.hash.lease.estimate",
    },
    {
      "$sources": [
        "fccd06633e70c2168c8eb0eb5e25b22e34c1c417a46d5073034ec977dfc1995d",
        "d7f40698fb0b0261834ef694ed275b4e6547e329cedc1c56708f098a5608b93a",
      ],
      "domain": "test8446e171-46ca-47d5-a3b7-1a658cb7f451",
      "exp": 1756502227392,
      "nbf": 1724966227392,
      "registrant": [
        "1b2c45910fb0d32cb1d1cd010cbc594bf05969b5",
      ],
      "registrar": [
        "846c35ce6ec62e4608a1215e14b5b16471904153",
      ],
      "schema": "network.xyo.ns.domain.registration.lease",
      "tld": "xyo",
    },
  ],
  [
    {
      "$signatures": [
        "2ff62a32daaa97f1b316dc07eaeae594a3d57c07bb03fa38c44dd803b192d13b47311a0954440233826a3ae10f6540d991947dad64c8a563e74ae78cd245657f",
      ],
      "addresses": [
        "6a2cb2545c71f84235346643a9f562a973d6adef",
      ],
      "payload_hashes": [
        "abb7ecb2cfc51e1a95f85477b3a4210a72886d5b22fcf32043736c48e2873f2c",
        "3ed825d48507b899395ca943e1dd6ec9a7c948e1cd1573a6cfda66de83af4b11",
      ],
      "payload_schemas": [
        "network.xyo.hash.lease.estimate",
        "network.xyo.ns.domain.registration.lease",
      ],
      "previous_hashes": [
        null,
      ],
      "schema": "network.xyo.boundwitness",
    },
    {
      "$sources": [
        "90259bc9ecde9d4c0061bc92dbfcf32e0f7b2603e49443d9f3c67a6d7e82c7d5",
      ],
      "currency": "USD",
      "exp": 1725225514773,
      "nbf": 1724966314773,
      "price": 16,
      "schema": "network.xyo.hash.lease.estimate",
    },
    {
      "$sources": [
        "407ed63c0c36fadae7ae8d16a42b678551e0ea6aa5357b76f0ffc1bce3ba2f22",
        "ced04c0a3f65bbefde58ba0d15767fcee20b6e25d3820f90c55f44f18effa70f",
      ],
      "domain": "testb88a0ee2-9665-48b3-b9c6-047eadc475ee",
      "exp": 1756502314773,
      "nbf": 1724966314773,
      "registrant": [
        "1b2c45910fb0d32cb1d1cd010cbc594bf05969b5",
      ],
      "registrar": [
        "846c35ce6ec62e4608a1215e14b5b16471904153",
      ],
      "schema": "network.xyo.ns.domain.registration.lease",
      "tld": "xyo",
    },
  ],
]
`;

exports[`parseDomainEstimates > with valid symmetric data > parses estimates from array 4`] = `
[
  [
    {
      "$signatures": [
        "2ff62a32daaa97f1b316dc07eaeae594a3d57c07bb03fa38c44dd803b192d13b47311a0954440233826a3ae10f6540d991947dad64c8a563e74ae78cd245657f",
      ],
      "addresses": [
        "6a2cb2545c71f84235346643a9f562a973d6adef",
      ],
      "payload_hashes": [
        "abb7ecb2cfc51e1a95f85477b3a4210a72886d5b22fcf32043736c48e2873f2c",
        "3ed825d48507b899395ca943e1dd6ec9a7c948e1cd1573a6cfda66de83af4b11",
      ],
      "payload_schemas": [
        "network.xyo.hash.lease.estimate",
        "network.xyo.ns.domain.registration.lease",
      ],
      "previous_hashes": [
        null,
      ],
      "schema": "network.xyo.boundwitness",
    },
    {
      "$sources": [
        "90259bc9ecde9d4c0061bc92dbfcf32e0f7b2603e49443d9f3c67a6d7e82c7d5",
      ],
      "currency": "USD",
      "exp": 1725225514773,
      "nbf": 1724966314773,
      "price": 16,
      "schema": "network.xyo.hash.lease.estimate",
    },
    {
      "$sources": [
        "407ed63c0c36fadae7ae8d16a42b678551e0ea6aa5357b76f0ffc1bce3ba2f22",
        "ced04c0a3f65bbefde58ba0d15767fcee20b6e25d3820f90c55f44f18effa70f",
      ],
      "domain": "testb88a0ee2-9665-48b3-b9c6-047eadc475ee",
      "exp": 1756502314773,
      "nbf": 1724966314773,
      "registrant": [
        "1b2c45910fb0d32cb1d1cd010cbc594bf05969b5",
      ],
      "registrar": [
        "846c35ce6ec62e4608a1215e14b5b16471904153",
      ],
      "schema": "network.xyo.ns.domain.registration.lease",
      "tld": "xyo",
    },
  ],
  [
    {
      "$signatures": [
        "6595022e974dae953b6ea145e6c0ca75211afd713a88b6d989e9d00da4e183ad427df8a8175ba46688c5345349464645befe1f2250ecfdc6bdb3cf9c27b65931",
      ],
      "addresses": [
        "93130bb7cf9b059ed6e29b50f29b569a2094bd5e",
      ],
      "payload_hashes": [
        "49699c9d1cfb1a8643037c9557123a9e643a3dd938f619af39b94966ecfdd6ff",
        "af31f9d6afd8f7cbbe5c3310f2a2da9e1af31d1b7cf8dae7d9786848de1e5bd7",
      ],
      "payload_schemas": [
        "network.xyo.hash.lease.estimate",
        "network.xyo.ns.domain.registration.lease",
      ],
      "previous_hashes": [
        null,
      ],
      "schema": "network.xyo.boundwitness",
    },
    {
      "$sources": [
        "dcc7ab18c86d90311bb1b59361f6698e2714294a91aa3126c554aa8483a7ae37",
      ],
      "currency": "USD",
      "exp": 1725225427392,
      "nbf": 1724966227392,
      "price": 16,
      "schema": "network.xyo.hash.lease.estimate",
    },
    {
      "$sources": [
        "fccd06633e70c2168c8eb0eb5e25b22e34c1c417a46d5073034ec977dfc1995d",
        "d7f40698fb0b0261834ef694ed275b4e6547e329cedc1c56708f098a5608b93a",
      ],
      "domain": "test8446e171-46ca-47d5-a3b7-1a658cb7f451",
      "exp": 1756502227392,
      "nbf": 1724966227392,
      "registrant": [
        "1b2c45910fb0d32cb1d1cd010cbc594bf05969b5",
      ],
      "registrar": [
        "846c35ce6ec62e4608a1215e14b5b16471904153",
      ],
      "schema": "network.xyo.ns.domain.registration.lease",
      "tld": "xyo",
    },
  ],
]
`;
